# fydp_stereo

./: .gitignore  FlyCapture2Test-Cam0-0.pgm  stereoCamera  tags
src/: .cameraSetup.cpp.swo  .cameraSetup.cpp.swp  .cameraSetup.h.swo  .cameraSetup.h.swp  .gpio.h.swp  .stereoCamera.cpp.swp  .stereo_rectify_disp.cpp.swp  CMakeCache.txt  CMakeLists.txt  FlyCapture2Test-Cam0-0.pgm  FlyCapture2Test-Cam1-0.pgm  FlyCapture2Test-Cam2-0.pgm  Makefile  Makefile2  cameraSetup.cpp  cameraSetup.h  disparity_method.cu  do_disp.cu  do_disp.h  gpio.c  gpio.h  individual_calib.cpp  individual_calib.h  individual_calib_input.xml  stereoCamera  stereoCamera.cpp  stereo_calib.cpp  stereo_calib.h  stereo_calib.xml  stereo_calib_01.xml  stereo_calib_02.xml  stereo_calib_10.xml  stereo_calib_12.xml  stereo_calib_20.xml  stereo_calib_21.xml  stereo_get_images.cpp  stereo_get_images.h  stereo_rectify_disp-with_trackbars.cpp  stereo_rectify_disp-with_trackbars.h  stereo_rectify_disp.cpp  (+1 more)
src/AsyncTriggerEx/: AsyncTriggerEx.cpp
src/FlyCapture2Test/: .FlyCapture2Test.cpp.swp
src/MultipleCameraEx/: .MultipleCameraEx.cpp.swp
src/Results/: extrinsics_01.yml  extrinsics_02.yml  extrinsics_10.yml  extrinsics_12.yml  extrinsics_21.yml  intrinsics_01.yml  intrinsics_02.yml  intrinsics_10.yml  intrinsics_12.yml  out_camera_0_calib.xml  out_camera_1_calib.xml  out_camera_2_calib.xml
src/old calib_2/: extrinsics_01.yml  extrinsics_10.yml  extrinsics_12.yml  intrinsics_01.yml  intrinsics_10.yml  intrinsics_12.yml  out_camera_0_calib.xml  out_camera_1_calib.xml
src/old calibrations/: extrinsics_10.yml  extrinsics_20.yml  intrinsics_10.yml  intrinsics_20.yml  intrinsics_21.yml  (+3 more)
(+7 files in other folders)
